Add CSS styles for challenge rows and details

--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio interaction dev</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/redirect-page.js" defer></script>
 </head>
+
 <body>
-    
+    <h1>My Challenges</h1>
+    <main>
+        <div class="challenge-row">
+            <div class="challenge-image"></div>
+            <div class="challenge-details">
+                <h2>#Speech Quiz</h2>
+                <span>Speech synthesis, text to speech</span>
+                <p>
+                    This is a simple speech quiz that uses the speech synthesis API to read out the questions and
+                    answers.
+                    The user can select the correct answer and the quiz will read out the correct answer if the user
+                    gets it wrong.
+                </p>
+            </div>
+        </div>
+        <div class="challenge-row">
+            <div class="challenge-image"></div>
+            <div class="challenge-details">
+                <h2>#Track your body</h2>
+                <span>Handpose</span>
+                <p>
+                    This is a simple handpose app that tracks your body and displays the body parts that are detected.
+                    The user can select the correct answer and the quiz will read out the correct answer if the user
+                    gets it wrong.
+                </p>
+            </div>
+        </div>
+        <div class="challenge-row">
+            <div class="challenge-image"></div>
+            <div class="challenge-details">
+                <h2>#Foto herkenningsapp</h2>
+                <span>MobileNet</span>
+                <p>
+                    This is a photo recognition app that uses the MobileNet model to identify objects in uploaded
+                    images. MobileNet is a pre-trained deep learning model designed for mobile and embedded devices,
+                    making it efficient and fast for image recognition tasks.
+                </p>
+            </div>
+        </div>
+        <div class="challenge-row">
+            <div class="challenge-image"></div>
+            <div class="challenge-details">
+                <h2>#Device orientation & motion</h2>
+                <span>Deviceorientation, handleorientation</span>
+                <p>
+                    This is a simple device orientation and motion app that uses the deviceorientation and devicemotion
+                    events to track the orientation and motion of the device.
+                    The app displays the alpha, beta, and gamma values of the device and updates in real-time as the
+                    device is moved.
+                </p>
+            </div>
+        </div>
+        <div class="challenge-row">
+            <div class="challenge-image"></div>
+            <div class="challenge-details">
+                <h2>#City Game</h2>
+                <span>Geolocation API, Leaflet</span>
+                <p>
+                    This is a simple city game that uses the Geolocation API and Leaflet to display a map of the user's
+                    current location.
+                    The user can click on the map to guess the name of the city and the app will display the correct
+                    answer.
+                </p>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
