Made some updates to the challenges and finishing touches

--- a/challenge4.html
+++ b/challenge4.html
@@ -13,6 +13,7 @@
         <h1 id="countdown">Sec:30</h1>
         <h1 id="shakes">Shakes:0</h1>
     </div>
+    <h1>#Shake The Cocktail</h1>
     <div id="content">
         <h2 id="title">Keep shaking your cocktail as fast as possible for 30sec</h2>
         <img id="shaker" src="images/shaker.png" alt="Cocktail Shaker">
