--- a/index.html
+++ b/index.html
@@ -13,57 +13,63 @@
     <h1>My Challenges</h1>
     <main>
         <div class="challenge-row">
-            <div class="challenge-image"></div>
+            <div class="challenge-image">
+                <img src="images/quiz.png" alt="Speech Quiz">
+            </div>
             <div class="challenge-details">
                 <h2>#Speech Quiz</h2>
                 <span>Speech synthesis, text to speech</span>
                 <p>
-                    This is a simple speech quiz that uses the speech synthesis API to read out the questions and
-                    answers.
-                    The user can select the correct answer and the quiz will read out the correct answer if the user
-                    gets it wrong.
+                    This is a simple speech quiz that uses the speech synthesis API to read out the questions.
+                    The user can say the correct answer and the quiz will display it on the screen if it's right or
+                    wrong.
                 </p>
             </div>
         </div>
         <div class="challenge-row">
-            <div class="challenge-image"></div>
+            <div class="challenge-image">
+                <img src="images/ballon-title.png" alt="Track your body">
+            </div>
             <div class="challenge-details">
                 <h2>#Track your body</h2>
                 <span>Handpose</span>
                 <p>
-                    This is a simple handpose app that tracks your body and displays the body parts that are detected.
-                    The user can select the correct answer and the quiz will read out the correct answer if the user
-                    gets it wrong.
-                </p>
+                    This is a simple handpose balloon game that tracks if your forefinger touched/popped a balloon.
+                    Try the challenge of aiming your finger precisely to burst those balloons</p>
             </div>
         </div>
         <div class="challenge-row">
-            <div class="challenge-image"></div>
+            <div class="challenge-image">
+                <img src="images/scan.png" alt="Cocktail Shaker">
+            </div>
             <div class="challenge-details">
                 <h2>#Foto herkenningsapp</h2>
                 <span>MobileNet</span>
                 <p>
                     This is a photo recognition app that uses the MobileNet model to identify objects in uploaded
-                    images. MobileNet is a pre-trained deep learning model designed for mobile and embedded devices,
-                    making it efficient and fast for image recognition tasks.
+                    images. You make a photo of an object and the model will idetify the object and try to recognize
+                    what it is.
                 </p>
             </div>
         </div>
         <div class="challenge-row">
-            <div class="challenge-image"></div>
+            <div class="challenge-image">
+                <img src="images/cocktail.jpg" alt="Cocktail Shaker">
+            </div>
             <div class="challenge-details">
                 <h2>#Device orientation & motion</h2>
                 <span>Deviceorientation, handleorientation</span>
                 <p>
-                    This is a simple device orientation and motion app that uses the deviceorientation and devicemotion
-                    events to track the orientation and motion of the device.
-                    The app displays the alpha, beta, and gamma values of the device and updates in real-time as the
-                    device is moved.
+                    In this challenge I made a cocktail shaker where you need to shake for 30
+                    seconds. Using deviceorientation, the game tracks your movements in
+                    real-time. Can you beat the clock and achieve the highest shake count?
                 </p>
             </div>
         </div>
         <div class="challenge-row">
-            <div class="challenge-image"></div>
+            <div class="challenge-image">
+                <img src="images/maps.png" alt="City Game">
+            </div>
             <div class="challenge-details">
                 <h2>#City Game</h2>
                 <span>Geolocation API, Leaflet</span>
