--- a/challenge2.html
+++ b/challenge2.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Track your body</title>
     <script src="js/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-    <style>
-          body {
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #E43D11;
-            color: #ECE9E2;
-            font-family: Arial, sans-serif;
-
-        }
-
-        canvas {
-            border: 5px solid #ECE9E2;
-            border-radius: 16px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/track.css">
 </head>
+
 <body>
+    <div id="texts">
+        <h1 id="countdown">Sec:30</h1>
+        <h1 id="shakes">Popped:0</h1>
+    </div>
     <h1>#Pop The Balloon</h1>
     <script src="js/track.js"></script>
 </body>
+
 </html>
