--- a/challenge3.html
+++ b/challenge3.html
@@ -6,33 +6,7 @@
     <title>Herkennings App</title>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="js/p5.js"></script>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #E43D11;
-            color: #ECE9E2;
-            font-family: Arial, sans-serif;
-        }
-        canvas {
-            border: 5px solid #ECE9E2;
-            border-radius: 16px;
-        }
-        button{
-            background-color: #ECE9E2;
-            color: #E43D11;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="css/herkenning.css">
 </head>
 <body>
     <h1>#Foto herkenningsapp</h1>
